--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
-<link rel="icon" href="assets/img/LOGO.png" type="image/png" />
+    <link rel="icon" href="assets/img/LOGO.png" type="image/png" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -45,7 +45,7 @@
 
       <div class="profile-img">
         <img
-          src="assets/img/rafly.jpg"
+          src="assets/img/saya.JPG"
           alt=""
           class="img-fluid rounded-circle"
         />
@@ -117,7 +117,7 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-        <img src="assets/img/r.jpg" alt="" data-aos="fade-in" class="" />
+        <img src="assets/img/saya.JPG" alt="" data-aos="fade-in" class="" />
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <h2>Raflyano Ar'rasya Nur Syamsi</h2>
@@ -142,10 +142,7 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Tentang Saya</h2>
           <p class="text-small">
-            Saya remaja berusia 17 tahun. Saya adalah siswa SMK PERTIWI KUNINGAN
-            dari jurusan Rekaya Perangkat Lunak ( RPL ). Saya juga memiliki
-            sifat pekerja keras, rajin dan suka belajar hal baru. Saya juga
-            aktif dalam kelompok maupun individu.
+            Saya ingin menjadi bagian dari PT Inovindo Digital Media untuk memperluas keahlian saya dalam rekayasa perangkat lunak dan berkontribusi dalam pengembangan solusi digital yang inovatif dan bermanfaat bagi pelanggan. Dengan pendidikan dan keterampilan yang saya miliki di bidang ini, saya yakin dapat memberikan kontribusi yang berarti bagi tim dan berbagai proyek di perusahaan ini. Saya bersemangat untuk bekerja sama dengan tim yang kreatif dan dinamis dalam menciptakan produk-produk yang unggul.
           </p>
         </div>
         <!-- End Section Title -->
