--- a/feedback.html
+++ b/feedback.html
@@ -32,7 +32,7 @@
             mungkin. Terima kasih
           </p>
           <div class="flex justify-center">
-            <a href="/index.html"
+            <a href="https://raflyano-nur.github.io/Website_Cv/"
               class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg"
             >
               Go Back
