--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
+    <style>
+  .social-icons a {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 1.8rem;
+    color: white;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+  }
+
+  .social-icons a.whatsapp { background: #25D366; }
+  .social-icons a.tiktok   { background: #000; color: #fff; }
+  .social-icons a.instagram { background: #E1306C; }
+  .social-icons a.download { background: #007bff; }
+
+  .social-icons a:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  }
+</style>
   </head>
 
   <body class="index-page">
@@ -58,15 +82,25 @@
       </a>
 
       <div class="social-links text-center">
-        <a href="https://wa.me/6282240218605" class="whatsapp"
-          ><i class="bi bi-whatsapp"></i
-        ></a>
-        <a href="https://www.tiktok.com/@rafly.ano4?_t=8nwdb6mILU0&_r=1" class="facebook"><i class="bi bi-tiktok"></i></a>
-        <a
-          href="https://www.instagram.com/_coding_17?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-          class="instagram"
-          ><i class="bi bi-instagram"></i
-        ></a>
+
+<div class="social-icons">
+  <a href="https://wa.me/6282240218605" class="whatsapp" data-bs-toggle="tooltip" title="Chat WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+  </a>
+
+  <a href="https://www.tiktok.com/@rafly.ano4?_t=8nwdb6mILU0&_r=1" class="tiktok" data-bs-toggle="tooltip" title="Tiktok">
+    <i class="bi bi-tiktok"></i>
+  </a>
+
+  <a href="https://www.instagram.com/_coding_17" class="instagram" data-bs-toggle="tooltip" title="Instagram">
+    <i class="bi bi-instagram"></i>
+  </a>
+
+  <a href="assets/pdf/Cv Raflyano Ar`rasya Nur Syamsi.pdf" download="CV_Rafly.pdf" class="download" data-bs-toggle="tooltip" title="Download CV">
+    <i class="bi bi-download"></i>
+  </a>
+</div>
+        
       </div>
 
       <nav id="navmenu" class="navmenu">
@@ -273,6 +307,36 @@
               data-aos-delay="200"
             >
               <div class="icons flex-shrink-0">
+                <img src="assets/img/kemampuan/svg/jquery.svg" class="img-fluid" alt="" />
+              </div>
+              <div class="mt-3">
+                <h4 class="title">
+                  <a href="#kemampuan" class="stretched-link">Jquery (Pemula)</a>
+                </h4>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex mb-2"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icons flex-shrink-0">
+                <img src="assets/img/kemampuan/svg/tailwind.svg" class="img-fluid" alt="" />
+              </div>
+              <div class="mt-3">
+                <h4 class="title">
+                  <a href="#kemampuan" class="stretched-link">Tailwind Css (Menengah)</a>
+                </h4>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex mb-2"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icons flex-shrink-0">
                 <img src="assets/img/bootstrap.png" class="img-fluid" alt="" />
               </div>
               <div class="mt-3">
@@ -307,7 +371,52 @@
               </div>
               <div class="mt-3">
                 <h4 class="title">
-                  <a href="#kemampuan" class="stretched-link">Laravel (Pemula)</a>
+                  <a href="#kemampuan" class="stretched-link">Laravel (Menengah)</a>
+                </h4>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex mb-2"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icons flex-shrink-0">
+                <img src="assets/img/kemampuan/svg/codeigniter.svg" class="img-fluid" alt="" />
+              </div>
+              <div class="mt-3">
+                <h4 class="title">
+                  <a href="#kemampuan" class="stretched-link">Codeigniter (Pemula)</a>
+                </h4>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex mb-2"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icons flex-shrink-0">
+                <img src="assets/img/kemampuan/svg/mysql.svg" class="img-fluid" alt="" />
+              </div>
+              <div class="mt-3">
+                <h4 class="title">
+                  <a href="#kemampuan" class="stretched-link">MySQL (Menengah)</a>
+                </h4>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex mb-2"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icons flex-shrink-0">
+                <img src="assets/img/kemampuan/svg/postgresql.svg" class="img-fluid" alt="" />
+              </div>
+              <div class="mt-3">
+                <h4 class="title">
+                  <a href="#kemampuan" class="stretched-link">PostgreSQL (Menengah)</a>
                 </h4>
               </div>
             </div>
@@ -754,6 +863,10 @@
     });
   }
   form.addEventListener("submit", handleSubmit)
+
+  // Inisialisasi semua tooltip
+  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+  const tooltipList = [...tooltipTriggerList].map(el => new bootstrap.Tooltip(el));
 </script>
   </body>
 </html>
